manifests/overlays/prod/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: import-for-sa 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: import-for-sa
  template:
    metadata:
      labels:
        app: import-for-sa
    spec:
      containers:
        - name: import-for-sa 
          command: ["java","-jar","/app.jar"]
          args: ["--spring.config.location=file:/config/application.yml"]
          volumeMounts:
          - mountPath: /mnt/cloud-sample
            name: import-for-sa-volume
            readOnly: false
            subPath: cloud-sample
          - mountPath: /config
            name: application-properties
            readOnly: true
                          
      volumes:
      - name: import-for-sa-volume
        persistentVolumeClaim:
          claimName: import-for-sa-pvc
      - name: application-properties
        configMap:
          name: import-for-sa-configmap
          items:
            - key: application.yml
              path: application.yml
          defaultMode: 420
