manifests/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: import-for-sa
spec:
    ports:
    - port: 8080 
    selector:
        app: import-for-sa
